// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Get all Ads 1`] = `
Object {
  "config": Object {
    "adapter": [Function],
    "data": undefined,
    "headers": Object {
      "Accept": "application/json, text/plain, */*",
    },
    "maxBodyLength": -1,
    "maxContentLength": -1,
    "method": "get",
    "timeout": 0,
    "transformRequest": Array [
      [Function],
    ],
    "transformResponse": Array [
      [Function],
    ],
    "url": "http://localhost:3001",
    "validateStatus": [Function],
    "xsrfCookieName": "XSRF-TOKEN",
    "xsrfHeaderName": "X-XSRF-TOKEN",
  },
  "data": Array [
    Object {
      "_id": "6070ba817f6d8ead2695cfca",
      "title": "Hello, now from the in-memory database!",
    },
    Object {
      "_id": "6070ba887f6d8ead2695cfcb",
      "price": 10.5,
      "title": "Pizza",
    },
    Object {
      "_id": "6070baa07f6d8ead2695cfcc",
      "price": 10.5,
      "title": "Pizza",
    },
  ],
  "headers": Object {
    "content-length": "214",
    "content-type": "application/json; charset=utf-8",
  },
  "request": XMLHttpRequest {},
  "status": 200,
  "statusText": "OK",
}
`;

exports[`Insert a new Ad 1`] = `
Object {
  "config": Object {
    "adapter": [Function],
    "data": "{\\"title\\":\\"Pizza\\",\\"price\\":10.5}",
    "headers": Object {
      "Accept": "application/json, text/plain, */*",
      "Content-Type": "application/json;charset=utf-8",
    },
    "maxBodyLength": -1,
    "maxContentLength": -1,
    "method": "post",
    "timeout": 0,
    "transformRequest": Array [
      [Function],
    ],
    "transformResponse": Array [
      [Function],
    ],
    "url": "http://localhost:3001",
    "validateStatus": [Function],
    "xsrfCookieName": "XSRF-TOKEN",
    "xsrfHeaderName": "X-XSRF-TOKEN",
  },
  "data": Object {
    "message": "New ad inserted.",
  },
  "headers": Object {
    "content-length": "30",
    "content-type": "application/json; charset=utf-8",
  },
  "request": XMLHttpRequest {},
  "status": 200,
  "statusText": "OK",
}
`;
